[workspace]
resolver = "2"
members = ["lib"]

[package]
name = "hablog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hot-lib-reloader = "^0.6"
lib = { path = "lib" }
libc = "0.2.147"
tokio = { version = "1.29.1", features = ["full"] }
hex = "0.4.3"

